assets/css/style.css
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@100;400&family=Bakbak+One&family=Judson:ital,wght@0,400;0,700;1,400&family=Nunito:wght@300&family=Oswald:wght@200;300;400;500;600;700&family=Quando&family=Raleway:ital,wght@0,400;0,500;0,800;0,900;1,600;1,800&display=swap');
*{
    margin:0;
    padding:0;
    box-sizing: border-box;
    font-family: 'Nunito', serif;
}

 /* Style pg index.html */
body{
    width: 100%;
}

header{
   background-color:  #213a5c;
   padding: 2px 0;
   text-align: center;
   border-bottom: 2px solid #0e2038;
   height: 70px;
   
}

nav{
    display: flex;
    justify-content: space-around;
    padding: 1px;
    align-items: center;
}
nav img{
    width: 60px;
    padding-top: 10px;
    position: absolute;
    margin-right: 80%;
}

nav h1{
    color:#d3d3d3;
    font-size: 35px;
    font-weight: bold;
    padding: 5px;
    position: relative;
}


nav ul{
    display: flex;
    align-items: center;
    list-style: none;
}

nav ul li{
    margin-right: 40px;
}

nav ul li a{
    color:#d3d3d3;
    text-decoration: none;
    font-size: 20px;
}

ul li a:hover{
    background-color:#e84d1b;
      
}

.container{
   display: flex;
   background-color: #e84d1b;
   background-image: url('../img/computer- fiber.jpeg');
   background-size: cover;
   align-items: center;
   height: 85vh;
   padding: 0 5%;
   justify-content: left;
}

.content h2{
    font-size: 50px;
    color:black;
    font-weight: bold;
    margin-right: 200px;
}

.content p{
    font-size: 25px;
    color:black;
    font-weight: bold;
    margin-right: 200px;padding-bottom: 20px;
}

.btn-content{
    text-decoration: none;
    margin-top: 10px;
    width: 200px;
    font-size: 120x;
    background: #e84d1b;
    border-color: transparent;
    color:black;
    font-weight: bold;
    border-radius: 5px;
    padding: 5px 10px;
}

.btn-content:hover{
    background-color: #a0c7eb;
    border-radius: 5px;
    padding: 5px 10px;
}

.content-2{
    background-color: #e84d1b;
    height: 75vh;
}

.content-2 h1{
    color: #efeeee;
}

.about-us{
    text-align: center;
    background-color:gainsboro;
    color: black;
    padding-bottom: 10px;
    width: 100%;
}

.about-us h2{
    font-family: 'nunito', serif;
    font-size: 40px;
    font-style: italic;
    font-weight: bold;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 20px;
    background: #e25822;
    border-bottom: 2px solid gainsboro;
    border-style: groove;
    box-shadow: 4px 4px 4px #074276;
}

.about-us p{
    padding-top: 15px;
    margin-left: 30px;
    margin-right: 30px;
    font-size: 20px;
    padding-bottom: 30px;
    line-height: 40px;
    width: 95%;
}

.container-grid{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    justify-content: center;
}

.container-grid > div{
    color: black;
    text-align: center;
    align-items: center;
    font-size: 20px;
}

.container-grid img{
    width: 80px;
    justify-items: center;
    align-items: center;
}

.container-grid h2{
    font-size: 40px;
    font-style: italic;
    padding-top: 10px;
    padding-bottom: 20px;
    text-align: center;
    width: 80%;
    color: #e25822;
}

.container-grid p{
    font-size: 20px;
    padding-top: 5px;
    padding-bottom: 10px;
    margin-left: 10px;
    align-items: center;
    text-align: center;
    line-height: 40px;
    width: 80%;
}

.container-grid ul li{
    text-decoration: none;
    list-style: none;
    text-align: left;
    line-height: 25px;
    padding-top: 20px;
}

.fa-solid{
    font-size:15px;
    padding-right: 5px;
}

footer{
    background-color:  #213a5c;
    padding: 2px 0;
    text-align: center;
    border-top: 2px solid #0e2038;
    height: 300px;
}

.container-footer{
    display: flex;
    width: 100%;
    height: 300px;
    padding: 10px;
    align-items: center;
    justify-content: center;
 }

 .links-home{
    display: inline-flex;
    width: 30%;
    height: 80%;
    font-size: 20px;
    padding-left: 15px;
    text-align: left;
    line-height: 50px;
 }

 .links-home ul li, .links-home ul li a, .menu-footer ul li, .menu-footer ul li a{
    list-style: none;
    text-decoration: none;
    color: #efeeee;
 }

.links-home ul li a:hover{
    background: #e25822;
    border-radius: 5px;
    padding: 5px 10px;;
}

.menu-footer ul li a:hover{
    background: #e25822;
    border-radius: 50%;
    padding: 5px 10px;
}

 .form-footer{
    background: gainsboro;
    width: 40%;
    height: 80%;
    border-top-left-radius: 40px;
    border-bottom-right-radius: 40px;
    align-items: center;
    align-content: center;
    justify-content: center; 
 }

.newsletter{
    font-family: 'Oswald';
    font-size: 30px;
    text-align: center;
    justify-content: center;
    font-weight: bold;
}

.newsletter-p{
    font-family: 'Oswald';
    font-size: 20px;
    padding-top: 20px;
    text-align: center;
    justify-content: center;
}

.form-footer input{
    display: flex;
    justify-content: space-around;
    align-content: space-around;
    align-items: center;
    text-align:left;
    font-size: 15px;
    width: 60% ;
    height: 30px;
    margin-top: 15px;
    margin-left:20%;
    margin-right: 20%;
    border-radius: 10px;
    margin-bottom: 15px;
}

.btn-subscribe{
    margin-top: 10px;
    width: 100px;
    font-size: 15px;
    background: #a0c7eb;
    color:black;
    font-weight: bold;
    border-radius: 5px;
    padding: 5px 10px;
     text-decoration: none;
}

.btn-subscribe:hover{
    background-color: #e25822;
    border-radius: 5px;
    padding: 5px 10px;
}

.form-footer input:focus{
    background: #e6b8a5;
}

 .menu-footer{
    list-style: none;
    width: 30%;
    height: 80%;
    font-size: 25px;
    color: #efeeee;
    text-align: center;
    line-height: 50px;
 }


.copy{
    color: #efeeee;
    font-size: 15px;
    text-align: center;
}

 /* Style pg services.html */
main{
    background-color: gainsboro;
}
 .container-2{
    display: flex;
    align-items: center;
    justify-content: space-around;
    height: 81vh;
    background-image: url('../img/backgroun-blue.png');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    overflow: hidden;
 }

 .container-service{
    display: block;
    align-items: center;
    margin: 20px 50px;
    
 }

 .container-service h2{
    font-size: 50px;
    margin-bottom: 40px;
    font-weight: bold;
    color:#e84d1b;
 }

 .container-service h3{
    font-size: 25px;
    margin-bottom: 50px;
    color:#0e2038;
 }

 .container-service ul li{
    font-size: 20px;
    list-style: none;
    margin-bottom: 30px;
 }

 .fa-solid{
    font-size:15px;
    padding-right: 5px;
}

 .img-service {
    display: block;
    
 }
 .img-service img{
   width: 200px;
    margin-right: 15px;
 }

  /* Style pg contact.html */

.contact-principal{
    display: flex;
    left: 90px;
    align-items: center;
    justify-content: center;
    height: 85vh;
    background-image:  url('../img/soft-gradient-solid-color-4k-yl.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.contact-us{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 10px 20px;
   
    border-radius: 10px;
    box-shadow: 2px 2px 2px, rgb(48, 47, 47);
    background-image:  url('../img/soft-gradient-solid-color-4k-yl.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 600px;
}

.contact-us h2{
    color:#d3d3d3;
    font-size: 35px;
    margin: 10px;
}

.contact-us p{
    color:#d3d3d3;
    font-size: 20px;
    text-align: center;
    margin: 10px;
}

.contact{  
    display: flex;
    flex-direction: column;
    width: 60%;
    color: #d3d3d3;
    margin-bottom: 15px;
 }

 .label{
    display: flex;
 }

 .contact input{
    height: 50px;
    width: 100%;
    border-radius: 8px;
    font-size: 15px;
       
 }

 .contact textarea{
    height: 150px;
    width: 100%;
    border-radius: 8px;
    font-size: 15px;
    padding-top: 5px;
    
 }

 .contact-us input:focus, .contact-us textarea:focus{
    background: #a0c7eb;
 }

button{
    padding: 10px;
    margin-top: 10px;
    width: 30%;
    font-size: 15px;
    border: 3px solid #d3d3d3;
    background: transparent;
    color:  #d3d3d3;
    font-weight: bold;
    width: 100%;
    border-radius: 8px;
}

button:hover{
    background: #0e2038;
    color:  #d3d3d3;
}

 /* Style pg thanks.html */
.for-you{
    background-image: url('../img/background-white.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.7;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    width: 100%;
    height: 85vh;
}

.thank-you{
    display: block;
    background-color: #074276;
    width: 500px;
    height:500px;
    margin-left: 500px;
    margin-top: 100px;
    border-top-right-radius: 100px;
    border-bottom-left-radius: 100px;
    text-align: center;
    justify-content: center;
    align-items: center;
}

.content-thanks h1{
    padding-top: 100px;
    font-size: 80px;
    color:white;
    text-align: center;

}

.content-thanks h2{
    position: relative;    
    font-size: 35px;
    color:white;
    text-align: center;
}

.content-thanks p{
    padding-top: 15px;
    font-size: 25px;
    color:white;
    text-align: center;
    padding-bottom: 50px;
}

#button-thanks{
    text-decoration: none;
    justify-content: center;
    text-align: center;
    align-items: center;
    padding: 10px 20px;
    font-size: 15px;
    border: 2px solid #d3d3d3;
    background: #a0c7eb;
    color:black;
    font-weight: bold;
    border-radius: 10px;
}
#button-thanks:hover{
    border-radius: 10px;
    background:  #e25822;
    color: #0e2038;
}


/* clients page*/

.clients-container{
    height: 80vh;
    display:100%;
}

.clients{
    height: 20vh;
    width: 100%;
    background-color: gainsboro;
}

.clients h1{
    font-size: 40px;
    text-decoration: underline;
    text-decoration-color: #e84d1b;
    color:#0e2038;
    text-align: center;
    padding-top: 20px;
}

.clients p{
    font-size: 30px;
    color:#0e2038;
    text-align: center;
    padding-top: 10px;
}

.clients-business{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    text-align: center;
    margin-left: 50px;
    margin-right: 50px;
    padding-left: 50px;
    padding-right: 50px;
}

.clients-logo img{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 200px;
}

.clients-logo a{
    font-size: 15px;
    font-weight: bold;
    text-decoration: none;
    color: black;
    text-align: center;
   justify-items: center;
}

